--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,11 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+    main_page: "Main page"
+    list_categories: "List of categories:"
+    no_files_availible: "No files present"
+    file_not_processed: "File will be availible for online playing later"
+    new_videofile: "Upload new movie"
+    edit_link: "Edit"
+    are_you_sure: "Are you sure?"
+    destroy_link: "Delete"
